@startuml

title __DIALOGALERT's Class Diagram__\n

  namespace br.com.bancoms.components.dialogAlert {
    class br.com.bancoms.components.dialogAlert.DialogAlert {
        - backgroundDialog : Rectangle
        - buttonNao : Button
        - buttonOk : Button
        - buttonSim : Button
        - rootPane : Pane
        + DialogAlert()
        + fecharDialog()
        + setEventConfirmation()
        + setEventInformation()
    }
  }
  

  namespace br.com.bancoms.components.dialogAlert {
    enum AlertType {
      INFORMATION
      OPTION
      value
    }
  }
  

  br.com.bancoms.components.dialogAlert.DialogAlert -up-|> javafx.scene.layout.VBox
  br.com.bancoms.components.dialogAlert.DialogAlert o-- br.com.bancoms.components.dialogAlert.DialogAlert.AlertType : tipoDialog
  br.com.bancoms.components.dialogAlert.DialogAlert +-down- br.com.bancoms.components.dialogAlert.DialogAlert.AlertType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
